created gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 moz_preprocess/__pycache__/__init__.cpython-310.pyc
 moz_preprocess/__pycache__/bq_utils.cpython-310.pyc
 moz_preprocess/__pycache__/preprocess.cpython-310.pyc
+yeonjoo_code_testing.ipynb
