--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,2 @@
-moz_preprocess/__pycache__/__init__.cpython-310.pyc
-moz_preprocess/__pycache__/bq_utils.cpython-310.pyc
-moz_preprocess/__pycache__/preprocess.cpython-310.pyc
+moz_preprocess/__pycache__/
 yeonjoo_code_testing.ipynb
